fixed date errors on graph on shared.js and commented out stock price check from index page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <div class="jumbotron">
+      <!--<div class="jumbotron">
         <div>
           <p style="text-align: left;">Or just check some stock prices:</p>
           <select id="selected-symbol" class='form-control symbol-dropdown'>
@@ -47,7 +47,6 @@
           <h3 style="text-align: center;"><span id="chart-header-symbol" style="color: #53B981;"></span> Stock Price History</h3>
         <div class="row">
            <div class="col-md-4">
-               <!-- by default the 24 hour price history is selected -->
                <button class="btn btn-custom chart-time-interval-button selected-chart-time-interval">Past 24 Hours</button>
            </div>
            <div class="col-md-4">
@@ -60,7 +59,7 @@
         
         <div id="price-history-chart" style="min-width: 310px; height: 400px; margin: 0 auto; padding-bottom: 10px;">
         </div>
-      </div>
+      </div>-->
 
       <div class="jumbotron" id="predictions-search-section" style="display: none;">
         <div>
