--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
   <body>
 
     <div class="container">
+
+      <div style="margin-bottom: 30px;">
+        <!-- Adsense -->
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- predict.toine.io index page -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-0586745008007940"
+             data-ad-slot="4851744310"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
       <div class="jumbotron">
         <div>
-          <p style="text-align: left;">Make a prediction on where the price of a stock will go by a certain date or time. Come back later to check on how you did.</p>
+          <p style="text-align: left;">Make a prediction on where the price of a stock will go by a certain date or time. Receive an email when your prediction is realized or found to be false.</p>
           <a class="btn btn-lg btn-custom main-button" href="create">Make a Prediction</a>
           <a id="check-your-predictions-button" href="#predictions-search-section" class="btn btn-lg btn-custom main-button">Check on your Predictions</a>
         </div>
@@ -273,6 +288,17 @@
       });
 
     });
+  </script>
+
+  <!-- analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49936760-5', 'auto');
+    ga('send', 'pageview');
   </script>
 </html>
 
