--- a/create.html
+++ b/create.html
@@ -19,9 +19,24 @@
   <body>
 
     <style>
-    /*.p-end-year {
-      width: ;
-    }*/
+      .form-inline span {
+          font-size: 70%;
+        }
+
+      .form-inline select {
+        font-size: 10%;
+      }
+
+      /* form inline on mobile */
+      @media (min-width: 368px) {
+        .form-inline span{
+          font-size: inherit;
+        }
+
+        .form-inline select {
+          font-size: inherit;
+        }
+      }
 
     </style>
 
@@ -78,27 +93,8 @@
       </div>
 
       <div id="prediction-sentence" class="jumbotron" style="display: none; font-size: 90%; margin-left: 0px; color: #53B981;">
-        <p class="form-inline">
-          <span>I predict</span> <span id="p-object" style="background-color: black; color: #FFCC00; padding: 4px; border-radius: 4px;"></span> <span>will</span> 
-          <select id="p-action" class="form-control" style="width: 30%; margin: 10px auto;">
-            <option>reach above</option>
-            <option>sink below</option>
-            <option>stay above</option>
-            <option>stay below</option>
-          </select>
-        </p>
-        <p class="form-inline">
-          $<input id="p-value" type="number" value="100.00" step="0.01" style="width: 100px;" min="0" max="100.00"> <span>by</span> <input id="p-end-time" type="time" value="23:59"> <span>on</span>
-        </p>
-        <p class="form-inline">
-          <select id="p-end-year" class="form-control form-group" style="width: 30%"></select>
-          <select id="p-end-month" class="form-control form-group" style="width: 30%"></select>
-          <select id="p-end-day" class="form-control form-group" style="width: 30%"></select>
-        <p class="form-inline">
-          <input id="p-predictor" class="form-control" placeholder="your email (to get notified of the prediction result)" type="text">
-        </p>
-
-        <button id="p-create-button" class="btn btn-lg btn-custom main-button">Create Prediction</button>
+        
+        
       </div>
 
       <form id="prediction-creation-form" action="http://predict.toine.io/createprediction" method="post" style="display: none;">
@@ -141,20 +137,49 @@
 
   <script>
       $(document).ready(function () {
+        var setPredictionSentenceHTML = function(width) {
+          if(width >= 768) {
+            // first row
+            var firstRow = $("<p class='form-inline'><span>I predict</span> <span id='p-object' style='background-color: black; color: #FFCC00; padding: 4px; border-radius: 4px;'></span> <span>will</span> <select id='p-action' class='form-control' style='margin: 10px auto; display: inline-block;'><option>reach above</option><option>sink below</option><option>stay above</option><option>stay below</option></select></p>");
+
+            var secondRow = $("<p class='form-inline'>$<input id='p-value' type='number' value='100.00' step='0.01' style='width: 100px;' min='0'> <span>by</span> <input id='p-end-time' type='time' value='23:59'> <span>on</span></p>");
+
+            var thirdRow = $("<p class='form-inline'><select id='p-end-year' class='form-control form-group' style='width: 30%'></select><select id='p-end-month' class='form-control form-group' style='width: 30%'></select><select id='p-end-day' class='form-control form-group' style='width: 30%'></select></p>");
+
+            var forthRow = $("<p class='form-inline'><input id='p-predictor' class='form-control' placeholder='your email (to get notified of the prediction result)' type='text'></p>");
+
+            $("#prediction-sentence").append(firstRow);
+            $("#prediction-sentence").append(secondRow);
+            $("#prediction-sentence").append(thirdRow);
+            $("#prediction-sentence").append(forthRow);
+          }
+
+          else {
+            var predictionSentence = $("<p style='margin-left: 10px; line-height: 2.0;'>I predict <span id='p-object' style='background-color: black; color: #FFCC00; padding: 4px; border-radius: 4px;'></span> will <select id='p-action'><option>reach above</option><option>sink below</option><option>stay above</option><option>stay below</option></select> <input id='p-value' type='number' value='100.00' step='0.01' min='0'> <span>by</span> <input id='p-end-time' type='time' value='23:59'> <span>on</span> <select id='p-end-year' style='margin-left: 8px;'></select><select id='p-end-month' style='margin-left: 8px;'></select><select id='p-end-day' style='margin-left: 8px;'></select><input style='width: 95%; font-size: 70%;' id='p-predictor' placeholder='your email (to get notified of the prediction result)' type='text'></p>");
+            $("#prediction-sentence").append(predictionSentence);
+          }
+
+          var createButton = $("<button id='p-create-button' class='btn btn-lg btn-custom main-button'>Create Prediction</button>");
+          $("#prediction-sentence").append(createButton);
+        };
+
+        setPredictionSentenceHTML($(window).width());
+
+
         var setPredictionValue = function(action) {
           var predictionValue = parseFloat($("#most-recent-price").val());
           var newPredictionValue;
           if(action == "reach above") {
-            newPredictionValue = parseFloat((predictionValue*1.1).toFixed(2));
+            newPredictionValue = parseFloat((predictionValue*1.1)).toFixed(2);
           }
           else if(action == "sink below") {
-            newPredictionValue = parseFloat((predictionValue*0.9).toFixed(2));
+            newPredictionValue = parseFloat((predictionValue*0.9)).toFixed(2);
           }
           else if(action == "stay above") {
-            newPredictionValue = parseFloat((predictionValue*0.9).toFixed(2));
+            newPredictionValue = parseFloat((predictionValue*0.9)).toFixed(2);
           }
           else if(action == "stay below") {
-            newPredictionValue = parseFloat((predictionValue*1.1).toFixed(2));
+            newPredictionValue = parseFloat((predictionValue*1.1)).toFixed(2);
           }
 
           $("#p-value").val(newPredictionValue);
