Made predictor input type email (so no auto caps)

--- a/create.html
+++ b/create.html
@@ -146,7 +146,7 @@
 
             var thirdRow = $("<p class='form-inline'><select id='p-end-year' class='form-control form-group' style='width: 30%'></select><select id='p-end-month' class='form-control form-group' style='width: 30%'></select><select id='p-end-day' class='form-control form-group' style='width: 30%'></select></p>");
 
-            var forthRow = $("<p class='form-inline'><input id='p-predictor' class='form-control' placeholder='your email (to get notified of the prediction result)' type='text'></p>");
+            var forthRow = $("<p class='form-inline'><input id='p-predictor' class='form-control' placeholder='your email (to get notified of the prediction result)' type='email'></p>");
 
             $("#prediction-sentence").append(firstRow);
             $("#prediction-sentence").append(secondRow);
