Made prediction input for prediction search type email

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="jumbotron" id="predictions-search-section" style="display: none;">
         <div>
           <p style="text-align: left;"></p>
-          <input type='text' class='form-control' id='predictor-input' placeholder="Notify email or identity phrase."> <br/>
+          <input type='email' class='form-control' id='predictor-input' placeholder="predictor's email"> <br/>
           <a id="predictions-search-button" href="#predictions-results-section" class="btn btn-md btn-custom">Search</a>
         </div>
       </div>
