--- a/create.html
+++ b/create.html
@@ -97,7 +97,7 @@
         
       </div>
 
-      <form id="prediction-creation-form" action="http://predict.toine.io/createprediction" method="post" style="display: none;">
+      <form id="prediction-creation-form" action="/createprediction" method="post" style="display: none;">
           <input id="prediction-create-form-predictor" name="predictor" />
           <input id="prediction-create-form-type" name="type" value="stock"/>
           <input id="prediction-create-form-object" name="object" />
@@ -110,10 +110,10 @@
         <hr>
         <p class="col-lg-6">
           <span style="background-color: #53B981;" class="badge">
-            <a style="color: white;" href="http://predict.toine.io">Home</a>
+            <a style="color: white;" href="/">Home</a>
           </span>
           <span style="background-color: #53B981;" class="badge">
-            <a style="color: white;" href="http://predict.toine.io/create">Create</a>
+            <a style="color: white;" href="/create">Create</a>
           </span>
           <div id="prediction-create-errors" style="display: none;"></div>
         </p>
@@ -435,7 +435,7 @@
         */
       var populateSymbolsDropdown = function () {
         // grab the stocks symbols and names
-        var stocksInfoEndpoint = "http://predict.toine.io/objects?type=stock";
+        var stocksInfoEndpoint = "/objects?type=stock";
         var xmlhttp = new XMLHttpRequest();
         xmlhttp.open("GET", stocksInfoEndpoint, true);
         xmlhttp.onreadystatechange=function() {
