Increased height of date dropdowns

--- a/create.html
+++ b/create.html
@@ -144,7 +144,7 @@
 
             var secondRow = $("<p class='form-inline'>$<input id='p-value' type='number' value='100.00' step='0.01' style='width: 100px;' min='0'> <span>by</span> <input id='p-end-time' type='time' value='23:59'> <span>on</span></p>");
 
-            var thirdRow = $("<p class='form-inline'><select id='p-end-year' class='form-control form-group' style='width: 30%'></select><select id='p-end-month' class='form-control form-group' style='width: 30%'></select><select id='p-end-day' class='form-control form-group' style='width: 30%'></select></p>");
+            var thirdRow = $("<p class='form-inline'><select id='p-end-year' class='form-control form-group' style='width: 30%; height: 110%;'></select><select id='p-end-month' class='form-control form-group' style='width: 30%; height: 110%;'></select><select id='p-end-day' class='form-control form-group' style='width: 30%;  height: 110%;'></select></p>");
 
             var forthRow = $("<p class='form-inline'><input id='p-predictor' class='form-control' placeholder='your email (to get notified of the prediction result)' type='email'></p>");
 
