--- a/create.html
+++ b/create.html
@@ -142,7 +142,7 @@
             // first row
             var firstRow = $("<p class='form-inline'><span>I predict</span> <span id='p-object' style='background-color: black; color: #FFCC00; padding: 4px; border-radius: 4px;'></span> <span>will</span> <select id='p-action' class='form-control' style='margin: 10px auto; display: inline-block; height: 110%;'><option>reach above</option><option>sink below</option><option>stay above</option><option>stay below</option></select></p>");
 
-            var secondRow = $("<p class='form-inline'>$<input id='p-value' type='number' value='100.00' step='0.01' style='width: 100px;' min='0'> <span>by</span> <input id='p-end-time' type='time' value='23:59'> <span>on</span></p>");
+            var secondRow = $("<p class='form-inline'>$<input id='p-value' type='number' value='100.00' step='0.01' style='width: 100px;' min='0'> <span>by</span> <input id='p-end-time' type='time' value='23:59'> <span>EST on</span></p>");
 
             var thirdRow = $("<p class='form-inline'><select id='p-end-year' class='form-control form-group' style='width: 30%; height: 110%;'></select><select id='p-end-month' class='form-control form-group' style='width: 30%; height: 110%;'></select><select id='p-end-day' class='form-control form-group' style='width: 30%;  height: 110%;'></select></p>");
 
