--- a/create.html
+++ b/create.html
@@ -131,8 +131,8 @@
   
   <script src="assets/js/jquery-1.11.3.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="http://code.highcharts.com/highcharts.js"></script>
-  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <script src="assets/js/highcharts.js"></script>
+  <script src="assets/js/exporting.js"></script>
   <script src="assets/js/shared.js"></script>
 
   <script>
